chore: install dependencies
1. The pre-commit process
2. Code formatter
3. Static code analyser

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,14 @@ fastapi = "^0.88.0"
 uvicorn = {extras = ["standard"], version = "^0.20.0"}
 
 [tool.poetry.dev-dependencies]
+colored = "*"
+httpx = "*"
+pytest = "*"
+pytest-cov = "*"
+python-dotenv = "*"
+pytest-mock = "^3.7.0"
+black = "^22.6.0"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
